fix(block-section): enable word wrap (#3156)
* fix(block-section): enable text wrap

* revert changes to demo html

* refactor to support safari browser

--- a/src/components/calcite-block-section/calcite-block-section.scss
+++ b/src/components/calcite-block-section/calcite-block-section.scss
@@ -57,6 +57,7 @@
     my-0;
 
   text-align: initial;
+  word-wrap: anywhere;
 }
 
 .toggle--switch {
